--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "seed:reset": "db-migrate reset:seed --config database.json -e test"
   },
   "dependencies": {
-    "@babel/node": "^7.22.10",
+    "@babel/cli": "^7.19.3",
+    "@babel/node": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.18.9",
     "@sendgrid/mail": "^7.7.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.15.2",
@@ -50,6 +53,7 @@
     "pg-promise": "^11.4.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
     "babel-node": "^0.0.1-security",
     "nodemon": "^3.0.1"
   }
