--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "scripts": {
     "dev": "nodemon --exec babel-node index.js",
-    "prestart": "db-migrate down && npm run migrate:up",
+    "prestart": "npm run migrate:up",
     "start": "babel-node index.js",
     "migrations": "source .env && db-migrate",
     "lint": "eslint --fix app/ --ext .js",
